# web-scraper

./: pyproject.toml
mongodb_crawler/: docker-compose.yaml
mongodb_crawler/mongodb_crawler/: pipelines.py  settings.py
mongodb_crawler/mongodb_crawler/spiders/: quotes.py
