[tool.poetry]
name = "web-crawler"
version = "0.1.0"
description = ""
authors = ["Dan Chicot <daniel.chicot@dlapiper.com>"]
readme = "README.md"
packages = [{include = "web_crawler"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
